# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added knx-gateway-discover and knx-gateway-info scripts for gathering
  information from multicast and unicast KNX gateways, which connect home
  automation systems to IP networks. [Niklaus Schiess, Dominik Schneider]

o [NSE] Added script http-ls. Parses web server directory index pages with
  optional recursion. [Pierre Lalet]

o [NSE] Added script xmlrpc-methods. This script perfoms introspection of
  xmlrpc services and lists methods and their description. [Gyanendra Mishra]

o [NSE] Added script http-fetch. This script can be used to fetch all files
  from the target, specific files from the target or files that match a  given
  pattern. [Gyanendra Mishra]

o [NSE] Added script http-svn-enum. Enumerates users of a Subversion
  repostory by examinning commit logs. [Gyanendra Mishra]

o [NSE] Added script http-svn-info. Requests information from a
  Subversion repository.[Gyanendra Mishra]

o [NSE] Added hnap-info, detects and outputs info for Home Network
  Administration Protocol devices. [Gyanendra Mishra]

o [NSE] Added http-webdav-scan, which detects WebDAV servers. [Gyanendra Mishra]

o [NSE] Added tor-consensus-checker, which checks if a target is a
  known Tor node. [Jiayi Ye]

o [GH#51] Added IPv6 support to nmap_mass_rdns, improved reverse DNS cache,
  and refactored DNS code to improve readability and
  extensibility. All in all, this makes the rDNS portion of IPv6 scans
  much faster. [Gioacchino Mazzurco]

o [NSE] Added NTLM brute support to http-brute. [Gyanendra Mishra]

o [NSE] Added NTLM authentication support to http.lua and a related function to create
  an ntlm v2 session response in smbauth.lua. [Gyanendra Mishra]

o [NSE] [GH#106] Added a new NSE module, ls.lua, for accumulating and
  outputting file and directory listings. The afp-ls, nfs-ls, and smb-ls
  scripts have been converted to use this module. [Pierre Lalet]
